# reddit-postmachine

./: .gitignore  .pre-commit-config.yaml  BUG_FIX_SUMMARY.md  DETAILED_CODE_CHANGES.md  QUASAR_EXTENSION_USAGE.md  README.md  SINGLE_TAB_IMPLEMENTATION_DETAILS.md  SINGLE_TAB_REFACTOR_SUMMARY.md  package.json  pyproject.toml  quasar.config.js  requirements.txt
.github/workflows/: ci.yml
.quasar/: artifacts.json  client-entry.js
.quasar/bex/: entry-content-script-stats-content-script.js
Script Extention/: abilities.js  frappe-bridge.js  manifest.json  postm-page.js  raven.html  rc-page.js.map  reef.js
Script Extention/assets/: assets
lumi/: QUASAR_EXTENSION_USAGE.md  package-lock.json
lumi/.quasar/: artifacts.json
lumi/.quasar/bex/: entry-content-script-my-content-script.js  entry-content-script-submit-content-script.js
lumi/src-bex/: background.js  dom.js  extension-tab-manager.js  flair-handler.js  logger.js  manifest.json  message-handlers.js  my-content-script.js  post-service.js  state-manager.js  stats-content-script.js  submit-content-script.js  unified-tab-manager.js
lumi/src/layouts/: MainLayout.vue
lumi/src/pages/: IndexPage.vue  PopupPage.vue
lumi/src/router/: index.js
old/: .gitignore  BUILD.md  build.js  bun.config.js  manifest.json  package.json
old/archive/: postm-page.js  postm-page1.js  raven.js  reef.js
old/src/: README.md
old/src/content/: frappe-bridge.js  reddit-helper.js
old/src/services/: reef.js
reddit_postmachine/: hooks.py  modules.txt
scripts/: fix-manifest.js  synk-frappe-utils.sh
src/: App.vue  main.js
src-bex/: background.js  dom.js  manifest.json  my-content-script.js  stats-content-script.js  submit-content-script.js
src/boot/: extension.js
src/components/: EssentialLink.vue
src/css/: app.scss
src/layouts/: MainLayout.vue
src/pages/: OptionsPage.vue  PopupPage.vue
src/router/: routes.js
(+24 files in other folders)
