[project]
name = "reddit_postmachine"
authors = [
    { name = "AndrewM", email = "newandrewmraiev@gmail.com"}
]
description = "Reddit-Postmachine"
version = "0.1.0"  # Додали статичну версію
requires-python = ">=3.10"
readme = "README.md"
# dynamic = ["version"]  # Закоментували, бо тепер версія статична

dependencies = [
    "openai>=1.51.0",  # Для генерації контенту через OpenAI
    "praw>=7.7.0",  # Додали з requirements.txt
    "requests>=2.31.0",  # Додаткові корисні залежності
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true